--- a/packages/jaeger-ui/src/components/TracePage/TraceTimelineViewer/SpanDetail/AccordianLogs.css
+++ b/packages/jaeger-ui/src/components/TracePage/TraceTimelineViewer/SpanDetail/AccordianLogs.css
@@ -10,14 +10,14 @@ SPDX-License-Identifier: Apache-2.0
 }
 
 .AccordianLogs--header {
-  background: #e4e4e4;
+  background: var(--surface-primary);
   color: inherit;
   display: block;
   padding: 0.25rem 0.5rem;
 }
 
 .AccordianLogs--header:hover {
-  background: #dadada;
+  background: var(--surface-tertiary);
 }
 
 .AccordianLogs--toggle {
@@ -29,7 +29,7 @@ SPDX-License-Identifier: Apache-2.0
 }
 
 .AccordianLogs--content {
-  background: #f0f0f0;
+  background: var(--surface-primary);
   border-top: 1px solid #d8d8d8;
   padding: 0.5rem 0.5rem 0.25rem 0.5rem;
 }
